Fix blur on safari (because apple is stubborn)
haha yes -webkit-backdrop-filter go brrrrrrrr

--- a/styles.less
+++ b/styles.less
@@ -30,6 +30,7 @@ body {
     border-radius: 5px;
     background-color: @conbgcolor;
     padding: 20px;
+    -webkit-backdrop-filter: blur(10px); /* Add this line first, it fixes blur for Safari*/
     backdrop-filter: blur(10px);
     font-size: 10pt;
     width: 400px;
